gallery/assets/css/main.css
/* https://stackoverflow.com/a/3245187 */
@font-face {
    font-family: "OpenDyslexic3 Regular";
    src: url("../fonts/OpenDyslexic3/OpenDyslexic3-Regular.ttf") format("truetype");
}

@font-face {
    font-family: "OpenDyslexic3 Bold";
    src: url("../fonts/OpenDyslexic3/OpenDyslexic3-Bold.ttf") format("truetype");
}

h1,
h2,
h3 {
    font-family: "OpenDyslexic3 Bold", sans-serif;
}

/* dev.to/mnishiguchi/css-adding-margin-to-all-children-929 */
/*#pre_card > * {
    margin: 0;
}*/

/* FIXME: only for testing! */
/* Hunt for https://static.wikia.nocookie.net/cult-of-the-lamb/images/0/08/Site-background-dark/revision/latest?cb=20250112140801, but a lossless source! */
/* TODO: put a fadeout on the edges */
/* TODO: make the image flush to the edges */
/* https://stackoverflow.com/a/46898484, https://stackoverflow.com/a/18588879 */
#pre_card {
    margin: 0;
    padding: 0;
    width: 100%;
    height: 100vh;
    background-image: url("../img/img_temp/woolhaven-bg-poster.png");
    background-size: cover;
    background-position: bottom center;
    background-repeat: no-repeat;
    box-sizing: border-box;
    /*position: fixed;
    top: 0;
    left: 0;*/
}

/* https://forum.freecodecamp.org/t/css-margin-and-padding-problem/421309/10 */
#pre_card *,
body {
    margin: inherit;
    padding: inherit;
    box-sizing: inherit;
}

h1,
h2,
h3,
h4,
h5,
h6,
code,
samp,
th,
td,
tr {
    color: #f1edd9
}

